{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 27,
  "lineage": "0fec51a0-334d-71fd-ce38-9e46cd30b80f",
  "resources": [
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:129392916120:internet-gateway/igw-0ba3c523f3328339a",
            "id": "igw-0ba3c523f3328339a",
            "owner_id": "129392916120",
            "tags": {
              "Name": "grupi-2-igw"
            },
            "tags_all": {
              "Name": "grupi-2-igw"
            },
            "vpc_id": "vpc-0df36d573f68f2dec"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.test"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:129392916120:route-table/rtb-041e7ee184b482300",
            "id": "rtb-041e7ee184b482300",
            "owner_id": "129392916120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba3c523f3328339a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "grupi-2-rt"
            },
            "tags_all": {
              "Name": "grupi-2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df36d573f68f2dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_internet_gateway.test",
            "module.aws_network.aws_vpc.test"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f4f65e3c501802d",
            "route_table_id": "rtb-041e7ee184b482300",
            "subnet_id": "subnet-04c412a8a28ed1a2c"
          },
          "dependencies": [
            "module.aws_network.aws_internet_gateway.test",
            "module.aws_network.aws_route_table.test",
            "module.aws_network.aws_subnet.public_subnet",
            "module.aws_network.aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f8dfe44901b1bc7",
            "route_table_id": "rtb-041e7ee184b482300",
            "subnet_id": "subnet-04a6d0c50e0757684"
          },
          "dependencies": [
            "module.aws_network.aws_internet_gateway.test",
            "module.aws_network.aws_route_table.test",
            "module.aws_network.aws_subnet.public_subnet",
            "module.aws_network.aws_vpc.test"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:129392916120:security-group/sg-05b41c7651d8d67ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b41c7651d8d67ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "grupi-2-db-sg",
            "name_prefix": "",
            "owner_id": "129392916120",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0df36d573f68f2dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network.aws_vpc.test"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:129392916120:subnet/subnet-005042d77f6434964",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005042d77f6434964",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129392916120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grupi-2-private-subnet-0"
            },
            "tags_all": {
              "Name": "grupi-2-private-subnet-0"
            },
            "vpc_id": "vpc-0df36d573f68f2dec"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.test"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:129392916120:subnet/subnet-04c412a8a28ed1a2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c412a8a28ed1a2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129392916120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grupi-2-public-subnet-0"
            },
            "tags_all": {
              "Name": "grupi-2-public-subnet-0"
            },
            "vpc_id": "vpc-0df36d573f68f2dec"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:129392916120:subnet/subnet-04a6d0c50e0757684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a6d0c50e0757684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129392916120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grupi-2-public-subnet-1"
            },
            "tags_all": {
              "Name": "grupi-2-public-subnet-1"
            },
            "vpc_id": "vpc-0df36d573f68f2dec"
          },
          "dependencies": [
            "module.aws_network.aws_vpc.test"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:129392916120:vpc/vpc-0df36d573f68f2dec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0e4b6c380254148f9",
            "default_route_table_id": "rtb-0c40fdd2410f836f8",
            "default_security_group_id": "sg-0d94548ce2c67e7b1",
            "dhcp_options_id": "dopt-00a2d5f94a5b924b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df36d573f68f2dec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c40fdd2410f836f8",
            "owner_id": "129392916120",
            "tags": {
              "Name": "grupi-2-vpc"
            },
            "tags_all": {
              "Name": "grupi-2-vpc"
            }
          }
        }
      ]
    }
  ]
}